Fix Nonstandard Unicode, Whitespace, Perf & SEO
Wasted 2 hours of my life trying to add turnstile, also added some nice lighthouse tuff.

--- a/src/style.css
+++ b/src/style.css
@@ -7,6 +7,7 @@
 @font-face {
     font-family: "Chicago";
     src: url(/assets/chicago.ttf);
+    font-display: swap;
 }
 
 html, body {
